screenshot fix on mobile 2

--- a/app/assets/stylesheets/_screenshots.css.scss
+++ b/app/assets/stylesheets/_screenshots.css.scss
@@ -1,6 +1,7 @@
 #screenshot{
   flex: 0 0 100%;
   margin-top: 8rem;
+  margin-bottom: 1rem;
   margin-left: 5px;
   @media #{$tablet}{
     position: fixed;
